# source/back-end/app/routes/airportRouter.js
@@ -4,5 +4,6 @@ const airportController = require('../controllers/airportController');
 
 router.get('/', airportController.getAllAirports);
 router.get('/id/:id', airportController.getAirportById);
+router.get('/state/:state', airportController.getAirportsByState);
 
 module.exports = router;
